--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,6 +1,13 @@
-.img-container img
-{
-    display: inline-block;
+.card
+{    
     width: 200px;
     height: 200px;
+    -webkit-box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    margin: 10px;
+}
+
+.card-img-top {
+    height: 100%;
+    overflow: hidden;
 }
